# 2dRidgeletBTE

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  brt_config.h.in  mpreal.h
applications/matrices/: CMakeLists.txt  main_mass_matrix.cpp  main_rt_tensor.cpp  rt_tensor.org
applications/matrices/data/46/fc170e-8d49-4df6-9abb-82ec7c81d9be/: rt_tensor_cdecay.py
applications/mpi/: CMakeLists.txt  README.org  main_bte_omp.cpp
applications/post_processing/: CMakeLists.txt  active_coefficients.cpp  commented-ae.cpp  compute_rt.cpp  make-config.py
applications/python/: CMakeLists.txt  __init__.py.in  pyFFRT.C  rt_basis.py
base/: array_buffer.hpp  buffered_output_array.hpp  coeff_array.hpp  csingleton.hpp  eigen2hdf.hpp  exceptions.hpp  hash_specializations.hpp  import_coeffs.hpp  init.hpp  logger.hpp  my_map.hpp  numbers.hpp  pcout.hpp  polyval.hpp  pow2p.hpp  timer.hpp  types.hpp
boundary_conditions/: inflow_bc.hpp
cmake/checks/: CMakeLists.txt  cxx_features.cmake
cmake/modules/: FindBoostNpy.cmake  FindFFTW3.cmake  FindHDF5.cmake  FindMPFR.cmake  FindTBB.cmake  FindYamlCpp.cmake
doc/: CMakeLists.txt  doxycfg.in
enum/: enum.hpp
export/: CMakeLists.txt  hdf_writer.cpp  hdf_writer.hpp  output_handler.hpp
fft/: fft2.hpp  fft2_r2c.hpp  fft_planner_old.hpp  ft_grid_helpers.hpp  planner.hpp  shift.hpp
fft/ft_grid_helpers_impl/: fourier_modes.hpp  ftcut.hpp
matrices/: matrix_entries.hpp  tensor_entries.hpp
operators/: operators.hpp
ridgelet/: basis.hpp  fold.hpp  helpers.hpp  init_fftw.hpp  lambda.hpp  rc_linearize.hpp  ridgelet_cell_array.hpp  ridgelet_frame.hpp  rt.hpp  translation.hpp
ridgelet/construction/: ft.hpp  ridgelet_functions.hpp  translation_grid.hpp
solver/: cg.hpp  ridgelet_solver.hpp
spectral/: eval_handlers.hpp  filtered_range.hpp  h2n_1d.hpp  hermite_to_nodal.hpp  hermiten.hpp  hermiten_eval_wrapper2d.hpp  hermiten_impl.hpp  hermitenw.hpp  lagrange_polynomial.hpp  laguerre_ks_eval_wrapper2d.hpp  laguerren.hpp  laguerren_impl.hpp  laguerren_ks.hpp  laguerrenw.hpp  macroscopic_quantities.hpp  pl_radial_eval.hpp  polar_to_hermite.hpp  polar_to_nodal.hpp  poly_base.hpp  shift_hermite.hpp  shift_hermite_2d.hpp
spectral/basis/: basis_types.hpp  spectral_basis.hpp  spectral_basis_dimension_accessor.hpp  spectral_basis_factory.hpp  spectral_basis_factory_base.hpp  spectral_basis_factory_complex.hpp  spectral_basis_factory_hermite.hpp  spectral_basis_factory_ks.hpp  spectral_elem.hpp  spectral_elem_accessor.hpp  spectral_elem_collection.hpp  spectral_function.hpp  spectral_spherical_complex.hpp
spectral/basis/spectral_function/: hermite_polynomial.hpp  spectral_coord_traits.hpp  spectral_function_base.hpp  spectral_id.hpp  spectral_ks_radial.hpp  spectral_radial_function.hpp  spectral_spherical_complex.hpp  spectral_spherical_real.hpp  spectral_weight_function.hpp
spectral/basis/toolbox/: spectral_basis.hpp
spectral/collision/: CMakeLists.txt  collision_tensor_galerkin.cpp  collision_tensor_galerkin.hpp
spectral/eval_handlers/: hermite_eval_handler_2d.hpp
spectral/mpfr/: import_std_math.hpp
spectral/quadrature/: CMakeLists.txt  gauss_hermite_quadrature.cpp  gauss_hermite_quadrature.hpp  gauss_hermite_roots.cpp  gauss_hermite_roots.hpp  gauss_legendre_quadrature.cpp  gauss_legendre_quadrature.hpp  maxwell_quadrature.cpp  maxwell_quadrature.hpp  qgauss_laguerre.hpp  qgauss_legendre.hpp  qhermite.hpp  qhermitew.hpp  qmaxwell.hpp  qmidpoint.cpp  qmidpoint.hpp  quad_factory.hpp  quadrature_base.hpp  quadrature_handler.hpp  tensor_product_quadrature.hpp  trig_int.cpp  trig_int.hpp
spectral/utility/: mass_matrix.hpp  project.hpp  utility.hpp
test/: CMakeLists.txt  advection_inflow.hpp  main_assemble.cpp  main_cg.cpp  main_fft_planner.cpp  main_ridgelet_functions.cpp  main_rtbasis.cpp  main_tensor_entries.cpp  main_test_approximation.cpp  main_test_cell.cpp  main_test_fft2.cpp  main_test_fft2r2c.cpp  main_test_fftshift.cpp  main_test_fold.cpp  main_test_ftcut.cpp  main_test_ifft2.cpp  main_test_rt.cpp  main_test_rt_manual.cpp  main_test_rt_random.cpp  main_test_rt_truncate.cpp
test/base/: CMakeLists.txt  main_test_P2N.cpp
test/gtest/: CMakeLists.txt  _gtest_rclinearize.cpp  gtest_mq_eval.cpp  gtest_p2n.cpp  gtest_rca.cpp  gtest_rt.cpp  main.cpp
test/mpi/: CMakeLists.txt  README.org  init_bte_omp.py  main_test_hdf_writer.cpp  main_test_hdf_writer.py  main_test_output_handler.cpp
test/phase_space/: CMakeLists.txt  advection_inflow_dir.py  main_advection_dir.cpp  main_advection_inflow_dir.cpp  main_inflow_source.cpp
test_scripts/: __CMakeLists.txt
test_scripts/bte_omp_ftcg_small/: create_coeffs.py  output_handler_init.h5  spectral_basis.desc
traits/: type_traits.hpp
