INCLUDE_DIRECTORIES(BEFORE SYSTEM "${MPI_CXX_INCLUDE_PATH}")
set(SYSTEM_LIBRARIES "${MPI_CXX_LIBRARIES};${SYSTEM_LIBRARIES}")

include_directories(${PROJECT_SOURCE_DIR}/src)
FILE(GLOB_RECURSE sources "*.cpp")
add_library(export ${sources})

INSTALL(TARGETS export ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
